# resolve

./: .gitignore  readme.md  todo.md  vm-setup.sh
Resolve/Resolve/: ContentView.swift  ResolveApp.swift
Resolve/Resolve.xcodeproj/: project.pbxproj
Resolve/Resolve/Assets.xcassets/Flame2.imageset/: Contents.json
Resolve/Resolve/Assets.xcassets/Flame3.imageset/: Contents.json
Resolve/Resolve/Assets.xcassets/Flame4.imageset/: Contents.json
Resolve/Resolve/Assets.xcassets/Flame5.imageset/: Contents.json
Resolve/Resolve/Assets.xcassets/Primary200.colorset/: Contents.json
Resolve/Resolve/Assets.xcassets/Primary300.colorset/: Contents.json
Resolve/Resolve/Assets.xcassets/Primary400.colorset/: Contents.json
Resolve/Resolve/Assets.xcassets/Primary500.colorset/: Contents.json
Resolve/Resolve/Assets.xcassets/Primary600.colorset/: Contents.json
Resolve/Resolve/Lib/: Color.swift  Data.swift  Streaks.swift  Types.swift
Resolve/Resolve/RiveAssets/: lobster-1.riv  lobster-2.riv
Resolve/Resolve/Views/: ResolutionCard.swift
Resolve/Resolve/Views/Screens/: ResolutionDetail.swift  (+1 more)
Resolve/ResolveTests/: ResolveTests.swift
Resolve/ResolveUITests/: ResolveUITests.swift  ResolveUITestsLaunchTests.swift
api/: Cargo.toml
api/migrations/: 20250703183746_initial.up.sql
api/src/: main.rs
api/src/handlers/: mod.rs  verify_email.rs  waitlist_signup.rs
website/: package.json
website/src/components/: WaitistSignupForm.tsx
website/src/layouts/: BaseLayout.astro
website/src/pages/: error.astro  index.astro  success.astro
website/src/styles/: global.css
(+8 files in other folders)
